fixed bugs with profile having too much padding

--- a/election/static/css/base.css
+++ b/election/static/css/base.css
@@ -74,10 +74,6 @@ header .header-right{
     right: 0;
 }
 
-.content{
-    padding: 0px 12.5vw;
-}
-
 .profile{
     width: 12.5vw;
     font-family: 'montserratbold';
